--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
 <div class="container">
 	<header> 
-		<h1> Tanner Yuhase </h1>
+		<div class="hero-container"><h1> Tanner Yuhase </h1>
 		<p>Web and Graphic Designer<!-- i class="fa fa-quote-left"></i> 
-			<i class="fa fa-quote-right"></i> --></p>
+			<i class="fa fa-quote-right"></i> --></p></div>
 	</header>
 	<nav> 
 		<ul>
@@ -37,7 +37,7 @@
 		<h3><i class="fa fa-university"></i> At Work</h3>
 		<p>I work at West Virginia University doing web development for WVU Healthcare. I work on the intranet mostly, but I get to work with some great people so thats always good. Always looking for opportunities to learn more and grow as a designer (and person).</p>
 		<p>My focus is creating cohesive projects using modern web techniques.<br>
-			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Managemnt Systems including Wordpress, Kirby, Kentico, Umbraco, and WVU's Slate</p>
+			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Managemnt Systems including Wordpress, Kirby, Kentico, Umbraco, and WVU's CleanSlate.</p>
 			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results.</p>
 			<p>As with most in my field, I make use of numerous programs and tools such as the adobe suite, visual studio, sublime text, notepad, MS office products, ftp programs, and much more.</p>
 		<img src="images/960x360-2.jpg" class="imgfull">
