--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 	</nav> 
 	<section> 
 		<h2 id="hello">Hello</h2>
-		<p>I'm Tanner Yuhase,</p>
-		<p>Web/Design/Development philosopher.<br>
+		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
+		 <p>
 			Basically, my professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product.</p>
 		<p>I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p>
 		<h3><i class="fa fa-university"></i> At Work</h3>
-		<p>I work at West Virginia University doing web development for WVU Healthcare. I work on the intranet mostly, but I get to work with some great people so thats always good. Always looking for opportunities to learn more and grow as a designer (and person).</p>
+		<p>I work at West Virginia University doing web development and graphic design for the Eberly College of Arts and Sciences. Currently developing/maintaining ~130 websites and overseeing all the print collateral from magazines to promotional swag. Always looking for opportunities to learn more and grow as a designer (and person).</p>
 		<p>My focus is creating cohesive projects using modern web techniques.<br>
-			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Managemnt Systems including Wordpress, Kirby, Kentico, Umbraco, and WVU's CleanSlate.</p>
+			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others.</p>
 			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results.</p>
 			<p>As with most in my field, I make use of numerous programs and tools such as the adobe suite, visual studio, sublime text, notepad, MS office products, ftp programs, and much more.</p>
 		<img src="images/960x360-2.jpg" class="imgfull">
