--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="js/scripts.js"></script>
 
 <!--[if lt IE 9]>
 <script src="dist/html5shiv.js"></script>
@@ -16,9 +17,8 @@
 <body>
 
 	<header> 
-		<div class="container"><h1> Tanner Yuhase </h1>
-		<p>Web and Graphic Designer<!-- i class="fa fa-quote-left"></i> 
-			<i class="fa fa-quote-right"></i> --></p></div>
+		<div class="container fade-in"><h1>  Tanner Yuhase</h1> <br>
+		<p>Web Dev | Graphic Designer </p></div>
 	</header>
 	<nav> 
 		<ul>
@@ -28,36 +28,27 @@
 			<!--<li><a href="images/.pdf" target="_blank"></a></li>-->
 		</ul>
 	</nav> 
-	<section> 
-		<h2 id="hello">Hello</h2>
+	<main> 
+		<section id="hello">
+			<div>
+		<h2 id="hello">Hello.</h2>
 		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
 		 <p>
-			Basically, my professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product.</p>
-		<p>I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p>
+			My professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product. I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p></div>
+			<div>
+		<img src="images/tanner.jpg"  alt="Tanner relaxing in woodburn circle" class="">
+	</div>
+	</section>
+	<section id="work">
+		<div>
 		<h3><i class="fa fa-university"></i> At Work</h3>
 		<p>I work at West Virginia University doing web development and graphic design for the Eberly College of Arts and Sciences. Currently developing/maintaining ~130 websites and overseeing all the print collateral from magazines to promotional swag. Always looking for opportunities to learn more and grow as a designer (and person).</p>
-		<p>My focus is creating cohesive projects using modern web techniques.<br>
-			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others.</p>
-			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results.</p>
-			<p>As with most in my field, I make use of numerous programs and tools such as the adobe suite, visual studio, sublime text, notepad, MS office products, ftp programs, and much more.</p>
-		<img src="images/960x360-2.jpg" class="imgfull">
-		<h3><i class="fa fa-home"></i> At Home </h3>
-		<p>Outside of work, I'm mostly a family man. They take up most of my time and I prefer it that way. I do occasionally manage to play some video games, try to be healthy, or do some other form of nerdy thing. I love music and singing along. I was in school bands for almost a couple decades. I like listening to ideas and thinking about nothing. Here's some of my family!</p>
-		<ul class="sub-box">
-				<li class="sub1">
-					<img src="images/1.jpg" alt="Evelyn"/>
-				</li>
-				<li class="sub1">
-					<img src="images/2.jpg" alt="King and Isis"/>
-				</li>
-				<li class="sub1"> 
-					<img src="images/3.jpg" alt="Stacey and baby"/>
-				</li>
-				<li class="sub1"> 
-					<img src="images/4.jpg" alt="Tanner"/>
-				</li>
-		</ul>
-		<h2 id="work">Some Work</h2>
+			<img src="images/wbhero.jpg" alt="shot of downtown Morgantown with Woodburn in the forefront" class="imgfull">
+		<p><strong>My focus is creating cohesive projects using modern web techniques.</strong>
+			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others. </p>
+			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results. To further my skills as a developer, I've completed online training in accessibilty and js. My goal is to eventually be fluent enough in server technologies and programming to someday call myself a full-stack dev.</p>
+			<p>As with most in my field, I make use of numerous programs and tools such as the adobe suite, visual studio, sublime text, sketch, MS office products, ftp programs, and much more.</p>
+			<h2 id="work">Some Work</h2>
 		<p><a href="http://yuhase.com/Project-1/index.html">Study Project - RCB Research homepage</a></p>
 			<ul class="sub-box">
 				<li class="sub">
@@ -85,14 +76,38 @@
 					<a href="#!" class="lb" id="austerity"><img src="images/austerity.jpg" alt="austerity"/></a>
 				</li>
 			</ul>
+		</div>
+	</section>
+	<section id="home">
+		<div>
+		<h3><i class="fa fa-home"></i> At Home </h3>
+		<p>Outside of work, I'm mostly a family man. They take up most of my time and I prefer it that way. I do occasionally manage to play some video games, try to be healthy, or do some other form of nerdy thing. I love music and singing along. I was in school bands for almost a couple decades. I like listening to ideas and thinking about nothing. Here's some of my family!</p>
+		<ul class="sub-box">
+				<li class="sub1">
+					<img src="images/1.jpg" alt="Evelyn"/>
+				</li>
+				<li class="sub1">
+					<img src="images/2.jpg" alt="King and Isis"/>
+				</li>
+				<li class="sub1"> 
+					<img src="images/3.jpg" alt="Stacey and baby"/>
+				</li>
+				<li class="sub1"> 
+					<img src="images/4.jpg" alt="Tanner"/>
+				</li>
+		</ul>
+	</div>
 		</section>
+		
+	</main>
 		<footer>
+			<section>
 			<h2 id="talk">Let's Talk</h2>
-			<ul class="fa-ul">
+			<ul class="fa-ul flex">
 			
 			<li><a href="mailto:tyuhase@gmail.com" target"_blank"><i class="fa-li fa fa-envelope"></i> tyuhase(at)gmail.com</a></li>
 			<li><a href="https://twitter.com/yuhasedesign" target"_blank"><i class="fa-li fa fa-twitter"></i> @yuhasedesign</a></li>
-			<li><a href="http://www.twitch.tv/yuhase" target"_blank"><i class="fa-li fa fa-twitch"></i> yuhase</a></li></ul>
+			<li><a href="http://www.twitch.tv/yuhase" target"_blank"><i class="fa-li fa fa-twitch"></i> yuhase</a></li></ul></section>
 		</footer>
 
 
