--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			<div>
 		<h2 id="hello">Hello.</h2>
 		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
-		 <p>
-			My professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product. I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p></div>
+		 </div>
 			<div>
-		<img src="images/tanner.jpg"  alt="Tanner relaxing in woodburn circle" class="">
+		<p>
+			My professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product. I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p>
 	</div>
 	</section>
 	<section id="work">
@@ -78,7 +78,7 @@
 			</ul>
 		</div>
 	</section>
-	<section id="home">
+	<!--<section id="home">
 		<div>
 		<h3><i class="fa fa-home"></i> At Home </h3>
 		<p>Outside of work, I'm mostly a family man. They take up most of my time and I prefer it that way. I do occasionally manage to play some video games, try to be healthy, or do some other form of nerdy thing. I love music and singing along. I was in school bands for almost a couple decades. I like listening to ideas and thinking about nothing. Here's some of my family!</p>
@@ -97,17 +97,19 @@
 				</li>
 		</ul>
 	</div>
-		</section>
+		</section>-->
 		
 	</main>
 		<footer>
 			<section>
 			<h2 id="talk">Let's Talk</h2>
-			<ul class="fa-ul flex">
+			<ul class="fa-ul">
 			
 			<li><a href="mailto:tyuhase@gmail.com" target"_blank"><i class="fa-li fa fa-envelope"></i> tyuhase(at)gmail.com</a></li>
 			<li><a href="https://twitter.com/yuhasedesign" target"_blank"><i class="fa-li fa fa-twitter"></i> @yuhasedesign</a></li>
-			<li><a href="http://www.twitch.tv/yuhase" target"_blank"><i class="fa-li fa fa-twitch"></i> yuhase</a></li></ul></section>
+			<li><a href="http://www.twitch.tv/yuhase" target"_blank"><i class="fa-li fa fa-twitch"></i> yuhase</a></li></ul>
+<img src="images/tanner.jpg"  alt="Tanner relaxing in woodburn circle" class="">
+		</section>
 		</footer>
 
 
