--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<main> 
 		<section id="hello">
 			<div>
-		<h2 id="hello">Hello.</h2>
+		<h2>Hello.</h2>
 		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
 		 </div>
 			<div>
@@ -48,7 +48,7 @@
 			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others. </p>
 			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results. To further my skills as a developer, I've completed online training in accessibilty and js. My goal is to eventually be fluent enough in server technologies and programming to someday call myself a full-stack dev.</p>
 			<p>As with most in my field, I make use of numerous programs and tools such as the adobe suite, visual studio, sublime text, sketch, MS office products, ftp programs, and much more.</p>
-			<h2 id="work">Some Work</h2>
+			<h2 id="work">Recent Projects</h2>
 		<p><a href="http://yuhase.com/Project-1/index.html">Study Project - RCB Research homepage</a></p>
 			<ul class="sub-box">
 				<li class="sub">
