portfolio section overhaul

--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -163,7 +163,7 @@ $('.open').click(function() {
 		<div class="sub-box2">
 		<div id="featurednews" class="sub1">
         <h3> Postdoctoral fellow earns research honors for liver studies</h3>
-            <img src="http://www.hsc.wvu.edu/Research/ContentImages/LiverResearchAward.jpg" alt="researchers">
+            <img src="/Project-1/images/5.png" alt="researchers">
         </div>
         <div id="news" class="sub1">
         	<a href="#">WVU Dentistry student wins research award</a>
