--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Yuhase.com</title>
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
@@ -15,53 +15,74 @@
 </head>
 
 <body>
+	<a class="skip-to-main" href="#main">Skip to main</a>
 
-	<header> 
-		<div class="container fade-in"><h1>  Tanner Yuhase</h1> <br>
-		<p>Web Dev | Graphic Designer </p></div>
-	</header>
-	<nav> 
-		<ul>
-			<li><a href="#hello">Hello</a></li>
-			<li><a href="#work">Some Work</a></li>
-			<li><a href="#talk">Let's Talk</a></li>
-			<!--<li><a href="images/.pdf" target="_blank"></a></li>-->
-		</ul>
-	</nav> 
-	<main> 
+<header class="header">
+  <div class="container">
+    <a class="logo" href="/">Yuhase <span class="longform">Web and Design</span></a>
+
+ <button id="menu-toggle" class="menu-toggle" aria-label="Menu" aria-expanded="false" aria-controls="menu">
+ 	<span class="screen-reader-text">Menu</span>
+									<svg class="icon icon-menu-toggle" aria-hidden="true" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100">
+										<g class="svg-menu-toggle">
+											<path class="line line-1" d="M5 13h90v14H5z"/>
+											<path class="line line-2" d="M5 43h90v14H5z"/>
+											<path class="line line-3" d="M5 73h90v14H5z"/>
+										</g>
+									</svg>
+							</button>
+  </div>
+</header>
+   
+    <nav id="menu" aria-hidden="true" aria-labelledby="menu-toggle" role="navigation">
+<ul>
+ 		<li><a href="#">Process</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+</ul>
+</nav>
+
+<main class="main" id="main">
+  <section class="hero">
+    <div class="container fade-in" >
+      <h1 class="headline">Download </h1>
+      <p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
+      <div class="button-row">
+        <a class="button primary accent" href="#">Resume.pdf</a><a class="button secondary" href="#">Resume.doc</a>
+      </div>
+      <p class="postscript">If needed, you can <a href="#">download both versions of the resume as a Zip file</a>.</p>
+    </div>
+  </section>
+
+ <section class="call-out">
+    <div class="container">
+      <h2 class="headline">Make things, better. </h2>
+      <p><strong>My focus is creating cohesive projects using modern web techniques.
+      </strong>
+			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others. </p>
+
+		
+			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies, such as information hierarchy, composition, and color theory, can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results. To further my skills as a developer, I've completed online training in accessibilty and js. My goal is to eventually be fluent enough in server technologies and programming to someday call myself a full-stack dev.</p>
+			
+      <a class="button primary accent" href="#">It's a process.</a>
+    </div>
+  </section>
+
 		<section id="hello">
-			<div>
+			 <div class="container">
+			 	<div>
 		<h2>Hello.</h2>
 		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
 		 </div>
 			<div>
 		<p>
 			My professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product. I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p>
+		</div>
 	</div>
 	</section>
-	<section id="work">
-		<div>
-		<h3><i class="fa fa-university"></i> At Work</h3>
-		<p>I work at West Virginia University doing web development and graphic design for the Eberly College of Arts and Sciences. Currently developing/maintaining ~130 websites and overseeing all the print collateral from magazines to promotional swag. Always looking for opportunities to learn more and grow as a designer (and person).</p>
-		</div>
-		<div class="workpic-outer">
-			<div class="workpic-inner" role="img" aria-label="shot of downtown Morgantown with Woodburn in the forefront" title="shot of downtown Morgantown with Woodburn in the forefront">
-		</div>
-		</div>
-		<div>
-
-		<p><strong>My focus is creating cohesive projects using modern web techniques.</strong>
-			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others. </p>
-
-			</div>
-		<div>
-			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies such as information hierarchy, composition, and color theory can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results. To further my skills as a developer, I've completed online training in accessibilty and js. My goal is to eventually be fluent enough in server technologies and programming to someday call myself a full-stack dev.</p>
-			
-
-		
-		</div>
-	</section>
+	
 	<section id="portfolio">
+		 <div class="container">
 		<h2>Recent Projects</h2>
 		 <div class="port-container">
     <div class="port-item">
@@ -113,12 +134,14 @@
       </a>
     </div>
   </div><!--portcontainer-->
+</div>
 	</section>
 
 		
 	</main>
 		<footer>
 			<section id="talk">
+				 <div class="container">
 			<h2>Let's Talk</h2>
 			<div>
 			<ul class="fa-ul">
@@ -127,9 +150,10 @@
 			<li><a href="https://twitter.com/yuhasedesign" target"_blank"><i class="fa-li fa fa-twitter"></i> @yuhasedesign</a></li>
 			<li><a href="http://www.twitch.tv/yuhase" target"_blank"><i class="fa-li fa fa-twitch"></i> yuhase</a></li></ul>
 		</div>
-		<div>
-<img src="images/tanner.jpg"  alt="Tanner relaxing in woodburn circle" class="">
-</div>
+		</div>
+		 <div class="container">
+    <p class="small">&copy; 2018 Tanner Yuhase</p>
+  </div>
 		</section>
 		</footer>
 
