whole site overhaul

--- a/process/index.html
+++ b/process/index.html
@@ -37,8 +37,8 @@
     <nav id="menu" aria-hidden="true" aria-labelledby="menu-toggle" role="navigation">
 <ul>
  		<li><a href="#">Process</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
+    <li><a href="#">Recent Projects</a></li>
+    <li><a href="#">Let's Talk</a></li>
 </ul>
 </nav>
 
@@ -57,20 +57,34 @@
  <section class="call-out">
     <div class="container">
       <h2 class="headline">Make things, better. </h2>
-      <p class="lede">My focus is creating cohesive projects using modern web techniques.
-      </p>
-      <p>
+      <p><strong>My focus is creating cohesive projects using modern web techniques.
+      </strong>
 			Accessible HTML5, simple and coherent CSS3, cross-browser compatibility, SEO &amp; marketing strategies, I've worked with JavaScript and JQuery, and large number of Content Management Systems including Wordpress, Drupal, concrete5, Umbraco, WVU's CleanSlate, and several others. </p>
 
 		
 			<p>I have a BFA in Art and Design from WVU, which blessed me with a strong art background. Understanding and translating core art philosophies, such as information hierarchy, composition, and color theory, can make any project better. I thoroughly enjoy the critique process and have never been against starting again from the ground up to achieve the best results. To further my skills as a developer, I've completed online training in accessibilty and js. My goal is to eventually be fluent enough in server technologies and programming to someday call myself a full-stack dev.</p>
-
+			<p>
+      <a class="button primary accent" href="#">It's a process.</a>
+  </p>
     </div>
   </section>
+
+		<section id="hello">
+			 <div class="container">
+			 	<div>
+		<h2>Hello.</h2>
+		<p>I'm Tanner Yuhase, <br/>front-end web dev and graphic designer.</p>
+		 </div>
+			<div>
+		<p>
+			My professional passion is creating concepts and visual ideas and translating them into a project or strategy. I enjoy working with people to help translate a dream into a functioning extention of their product. I'm glad to work in a field that brings my love of art, music, logic, and technology together to create wonderful/useful things for others to enjoy.</p>
+		</div>
+	</div>
+	</section>
 	
 	<section id="portfolio">
 		 <div class="container">
-		<h2 class="headline">Recent Projects</h2>
+		<h2>Recent Projects</h2>
 		 <div class="port-container">
     <div class="port-item">
       <a href="#" data-content="" data-title="">
