--- a/404.html
+++ b/404.html
@@ -46,10 +46,10 @@
   
 
  <section class="call-out">
-    <div class="container">
+    <div class="container" style="margin-top: 10vh;">
       <h2 class="headline">Ya broke it. </h2>
-      <p class="lede"><strong>There's only like... 3 pages here so maybe <a href="yuhase.com">try again from home.</a></strong>
-      </p>
+      <p class="lede"><strong>This isn't one of the pages I made...</strong>
+      </p><p>There's only like... 3 pages here so maybe <a href="yuhase.com">try again from home.</a></p>
      
     </div>
   </section>
