final-first draft

--- a/projects/Project-1/index.html
+++ b/projects/Project-1/index.html
@@ -4,11 +4,11 @@
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <title>Research at the Health Sciences Center</title>
 <!--<link href="http://slate.wvu.edu/themes/shared/scss/v4/stylesheets/global-v4.css" rel="stylesheet" />-->
-<link href="wvu/css/styles.css" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+<link href="/projects/Project-1/wvu/css/styles.css" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="/projects/Project-1/css/styles.css">
 <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="scripts/scripts.js"></script>
+<script src="/projects/Project-1/scripts/scripts.js"></script>
 <script type="text/javascript">//<![CDATA[ 
 $(window).load(function(){
 $('.open').click(function() {
@@ -231,5 +231,5 @@ $('.open').click(function() {
 </div><!--CONTAINER-->
 
 </body>
-<script src="scripts/scripts.js"></script>
+<script src="/projects/Project-1/scripts/scripts.js"></script>
 </html>
