final-first draft

--- a/process/index.html
+++ b/process/index.html
@@ -47,16 +47,16 @@
     <div class="container fade-in" >
       <h1 class="headline">My Process</h1>
       <h2>Understanding</h2>
-      <p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>
+      <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
+      <p>subtext</p>-->
      
       <h2>Planning</h2>
-      <p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>
+         <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
+      <p>subtext</p>-->
 
        <h2>Product</h2>
-      <p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>
+        <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
+      <p>subtext</p>-->
     </div>
   </section>
 
