--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Yuhase.com</title>
-<link rel="stylesheet" type="text/css" href="css/styles.css">
+<link rel="stylesheet" type="text/css" href="../css/styles.css">
 <link rel="stylesheet" href="css/font-awesome-4.2.0/css/font-awesome.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
