final-first draft

--- a/process/index.html
+++ b/process/index.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Yuhase.com</title>
 <link rel="stylesheet" type="text/css" href="../css/styles.css">
-<link rel="stylesheet" href="css/font-awesome-4.2.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="../css/font-awesome-4.2.0/css/font-awesome.min.css">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
 <!--[if lt IE 9]>
 <script src="dist/html5shiv.js"></script>
@@ -23,14 +23,14 @@
 
  <button id="menu-toggle" class="menu-toggle" aria-label="Menu" aria-expanded="false" aria-controls="menu">
  	<span class="screen-reader-text">Menu</span>
-									<svg class="icon icon-menu-toggle" aria-hidden="true" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100">
-										<g class="svg-menu-toggle">
-											<path class="line line-1" d="M5 13h90v14H5z"/>
-											<path class="line line-2" d="M5 43h90v14H5z"/>
-											<path class="line line-3" d="M5 73h90v14H5z"/>
-										</g>
-									</svg>
-							</button>
+			<svg class="icon icon-menu-toggle" aria-hidden="true" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100">
+				<g class="svg-menu-toggle">
+					<path class="line line-1" d="M5 13h90v14H5z"/>
+					<path class="line line-2" d="M5 43h90v14H5z"/>
+					<path class="line line-3" d="M5 73h90v14H5z"/>
+				</g>
+			</svg>
+	</button>
   </div>
 </header>
    
