final-first draft

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav id="menu" aria-hidden="true" aria-labelledby="menu-toggle" role="navigation">
 <ul>
  		<li><a href="/process">Process</a></li>
-        <li><a href="/#about">About</a></li>
+        <li><a href="http://yuhase.com/#about">About</a></li>
         <li><a href="/projects">Recent Projects</a></li>
 </ul>
 </nav>
