--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="recent-projects">
 	<a class="skip-to-main" href="#main">Skip to main</a>
 
 <header class="header">
@@ -43,10 +43,10 @@
 </nav>
 
 <main class="main backpage" id="main">
-  <section>
+  <section id="recent-projects">
     <div class="container" >
       <h1 class="headline">Recent Projects</h1>
-      <a href="https://eberly.wvu.edu/"><h2>Eberly College of Art and Sciences</h2></a>
+      <h2><a href="https://eberly.wvu.edu/">Eberly College of Art and Sciences</a></h2>
       <p class="lede">This site was my first foray into CleanSlate so I learned a lot about the CMS and WVU's brand.</p>
       <p>I focused a lot of creating something that would be user-friendly to both the audience and the editors who work on the content. I created a lot of custom patterns that can be interfaced right from the online cms, so editors can make very elaborate pages without a lot of custom code work. At the same time, I made sure its not overwhelming to editors who have little experience</p>
       <p>I used this site as the basis for the various department and program sites for Eberly. Finding a balance between consistencey and letting them have some uniqueness came from working directly with the editors of the departments to address their needs. The site is currently undergoing a redesign. I'll post some of that when its closer to launch.  </p>
