final-first draft

--- a/projects/index.html
+++ b/projects/index.html
@@ -76,7 +76,7 @@
     </div>
   </section>
 		
-    <section id="health">
+    <section id="research">
     <div class="container" >
       
         <a href="/projects/Project-1">
