final-first draft

--- a/projects/index.html
+++ b/projects/index.html
@@ -55,8 +55,8 @@
   </section>
   <section id="mag">
     <div class="container" >
-      <a href="https://eberlymagazine.wvu.edu/features/growing-pains">
-        <h2>Eberly Magazine</h2></a>
+      <h2><a href="https://eberlymagazine.wvu.edu/features/growing-pains">
+        Eberly Magazine</a></h2>
       <p class="lede">The basic site design, a reskin of WVU Magazine, was already inplace. My touch has been in the updates and the articles.</p>
       <p>I really enjoy working on the stories within the magazine because its not often you get such great, flesh-out content to work with. I worked on creating articles that highlighted the imagery of the stories told and the people telling them. This is another that I'm redesigning at the moment. The challenge here will be working on a better way to structure the site that doesn't neccessitate migrating all the content (but it might).</p>
       <p>
@@ -79,8 +79,8 @@
     <section id="research">
     <div class="container" >
       
-        <a href="/projects/Project-1">
-        <h2>Research @ HSC</h2></a>
+        <h2> <a href="/projects/Project-1">
+       Research @ HSC</a></h2>
       <p class="lede">A prototype website I built for the research division of HSC.</p>
       <p>Though this site design was live for only a short time, I preserved the first draft on my site. It was a fun little project that I learned a lot from.</p>
       <p>
