final-first draft

--- a/process/index.html
+++ b/process/index.html
@@ -47,16 +47,44 @@
     <div class="container fade-in" >
       <h1 class="headline">My Process</h1>
       <h2>Understanding</h2>
-      <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>-->
-     
+     <p class="lede">
+         <ul>
+         	<li>Scope and audience</li>
+         	<li>Project limitations and Requirements</li>
+         	<li>Measurements of success</li>
+
+    	 </ul>
+ 	</p>
+      <p><!--subtext-Understanding--></p>
       <h2>Planning</h2>
-         <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>-->
+        <p class="lede">
+         <ul>
+         	<li>Research</li>
+         	<li>Design</li>
+         	<li>Prototype</li>
+         	<li>Secure buy-in</li>
+    	 </ul>
+ 	</p>
+    <p><!--subtext-Planning--></p>
 
        <h2>Product</h2>
-        <!--<p class="lede">Write something with a little personality and gaming puns to show you're not some weird robot who thinks suits and ties still are what people care about!</p>
-      <p>subtext</p>-->
+        <p class="lede">
+         <ul>
+         	<li>Develope</li>
+         	<li>Test</li>
+         	<li>Launch</li>
+    	 </ul>
+ 	</p>
+ 	<p><!--subtext-Product--></p>
+       <h2>Reassess</h2>
+       <p class="lede">
+         <ul>
+         	<li>Initial analytics</li>
+         	<li>Measurements of success</li>
+         	<li>Maintain and retain</li>
+    	 </ul>
+ 	</p>
+ 	<p><!--subtext-Reassess--></p>
     </div>
   </section>
 
