final-first draft

--- a/process/index.html
+++ b/process/index.html
@@ -70,7 +70,7 @@
        <h2>Product</h2>
         <p class="lede">
          <ul>
-         	<li>Develope</li>
+         	<li>Develop</li>
          	<li>Test</li>
          	<li>Launch</li>
     	 </ul>
